developerProject/force-app/main/default/objects/OJ_PM__Brokerage_Rate__c/OJ_PM__Brokerage_Rate__c.object-meta.xml
<CustomObject>
    <label>Brokerage Rate</label>
    <nameField>
        <label>Brokerage Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brokerage Rate</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>