developerProject/force-app/main/default/objects/OJ_PM__Brokerage_Rate__c/fields/OJ_PM__Cash_Bracket_Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Cash_Bracket_Lower_Limit__c</fullName>
    <label>Cash Bracket Lower Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>