developerProject/force-app/main/default/objects/OJ_PM__Brokerage_Rate__c/fields/OJ_PM__Hide_External_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Hide_External_Brokerage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide External Brokerage</label>
    <type>Checkbox</type>
</CustomField>