developerProject/force-app/main/default/objects/OJ_PM__Brokerage_Rate__c/fields/OJ_PM__Max_External_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Max_External_Brokerage__c</fullName>
    <label>Max External Brokerage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>